  functions
- Implemented production__print function
- Implemented grammar and test
- Implemented first set computation and test
- Implemented follow set computation and test
- Implemented LR(0) item and test
- Added a pnode_t definition to the common typed header
- Implemented computation of the set of sets of LR(0) items for Simple LR and
  test
- Implemented computation of the LR(0) ACTION and GOTO tables and test

# Changed
- Typed interfaces now include the common typed functions header for
  convenience
- Changed fpfdata_int, fpfdata_char, and fpfdata_str function names to
  int__print, char__print and string__print
- Renamed fpfdata_test to print_test

# Removed
- Removed pnode_t definitions from all files that defined it locally in favour
  of the single definition that now lives in the common typed header


0.6.1
-----
# Fixed
- trie:
  - Fixed conditions that decide the validity of a key, resulting in the
    following fixes:
    - "in" function no longer returns 1 when the trie is empty
    - "in" function no longer accepts invalid prefixes that are part of a valid
      key
  - Fixed case where inserting a key-value pair whose key was an invalid prefix
    of a valid key would result in the value of that key not being set


0.6.0
-----
# Added
- Implemented tests for terminal and production
- Implemented in function for trie

# Fixed
- Fixed fpfdata_str incorrectly dereferencing strings
- Trie no longer crashes when it has not found a key
- Fixed tools/viz_all_tests

# Changed
- The implementations of the lexer and trie print_data and dump_dot functions,
  as well as the parse_tree__data function have been adapted so that common
  typed fpfdata functions can now be used with them in the same manner as with
  rest of implementations


0.5.1
-----
# Fixed:
- Removed test/test_utils.h from the files to be installed


0.5.0
-----
# Added
- Implemented equivalence class and tests
- Implemented trie and tests
- Implemented typed interfaces