@@ -23,7 +23,7 @@ void trie__access(enum qt qt, node_t *ref, const char *key, void *info,
     predicate_t predicate, apply_t apply);
 void trie__insert(node_t *ref, const char *key, void *info);
 void trie__delete(node_t *ref, const char *key);
-void trie__print_data(FILE *stream, node_t *ref, fpfdata_t fpfdata);
+void trie__print(FILE *stream, node_t *ref, fpfdata_t fpfdata);
 int trie__length(const node_t *ref);
 
 #endif
