@@ -45,9 +45,9 @@ void SYM##__delete(node_t *ref, TYPE val, SYM##__predicate_t predicate)       \
 }                                                                             \
                                                                               \
 static                                                                        \
-void SYM##__print_data(FILE *stream, node_t *ref)                             \
+void SYM##__print(FILE *stream, node_t *ref)                             \
 {                                                                             \
-    avl__print_data(stream, ref, FPF);                                        \
+    avl__print(stream, ref, FPF);                                        \
 }                                                                             \
                                                                               \
 static                                                                        \
