@@ -9,9 +9,9 @@ int main(void)
     for (int i = 0; i < grammar__num_symbols(g); i++) {
         node_t *first_set = compute_first_set(g, i);
         assert(symbol_set__compare(first_set, &first_sets[i]));
-        /*symbol_path__print_data(stderr, first_set);
+        /*symbol_path__print(stderr, first_set);
         fprintf(stderr, " ?= ");
-        symbol_path__print_data(stderr, &first_sets[i]);
+        symbol_path__print(stderr, &first_sets[i]);
         fprintf(stderr, "\n");*/
     }
 }
